--- a/app/background/page.mdx
+++ b/app/background/page.mdx
@@ -5,18 +5,18 @@ import NextImage from "next/image";
 <InfoPage title="Background/Context">
   ## Grain legumes are important food and feed
 
-Global food systems will need to nearly double their production to feed the
-expected global population by 2050. The demand for meat alone is projected to
+Global food systems will need to nearly double their production to **feed the
+expected global population by 2050**. The demand for meat alone is projected to
 rise by 73% in response to a growing population and increased protein demand
 across both developed and developing countries. To meet this goal and mitigate
 the environmental sustainability challenges posed by meat production, the
-production and consumption of healthy and sustainable alternative proteins, such
-as those derived from pulse crops, need to be substantially increased.
+production and consumption of healthy and **sustainable alternative proteins**,
+such as those derived from pulse crops, need to be substantially increased.
 
-Advancing the current market trade of pulses as commodities to value-added
-products (e.g., protein concentrate, protein isolates, starch and fibre)
-presents a leadership and economic opportunity for Australia. However, effort is
-required to establish the core knowledge that underpins the long-term
+Advancing the current market trade of pulses as commodities to **value-added
+products** (e.g., protein concentrate, protein isolates, starch and fibre)
+presents a **leadership and economic opportunity for Australia**. However,
+effort is required to establish the core knowledge that underpins the long-term
 sustainability and profitability of pulses grown in Australia. Key knowledge
 gaps to developing an Australian plant protein pipeline include:
 
@@ -30,25 +30,25 @@ gaps to developing an Australian plant protein pipeline include:
 
 ## Role of grain legumes in smart agriculture
 
-Grain legumes, such as chickpeas, lentils, lupins, faba beans, and field peas,
-are essential components of sustainable agricultural systems in Australia. These
-crops are valued not only for their economic returns but also for their
-agronomic benefits:
+Grain legumes, such as **chickpeas, lentils, lupins, faba beans, and field
+peas**, are essential components of sustainable agricultural systems in
+Australia. These crops are valued not only for their economic returns but also
+for their **agronomic benefits**:
 
-- As nitrogen-fixing plants, legumes enrich soil fertility by converting
-  atmospheric nitrogen into forms usable by subsequent crops, reducing the need
-  for synthetic fertilisers.
-- Their inclusion in crop rotations helps break pest and disease cycles,
+- As **nitrogen-fixing plants**, legumes enrich soil fertility by converting
+  atmospheric nitrogen into forms usable by subsequent crops, **reducing the
+  need for synthetic fertilisers**.
+- Their inclusion in crop rotations helps **break pest and disease cycles**,
   improves soil structure, and enhances overall farm resilience.
-- Legumes contribute to climate-smart agriculture by lowering greenhouse gas
+- Legumes contribute to **climate-smart agriculture** by lowering greenhouse gas
   emissions and supporting biodiversity.
 
 ## Nutritional benefits
 
-Grain legumes are a cornerstone of plant-based diets and an increasingly
-important ingredient in health-conscious food products, including flours,
+Grain legumes are a cornerstone of **plant-based diets** and an increasingly
+important ingredient in **health-conscious food products**, including flours,
 snacks, meat substitutes, and dairy alternatives. Grain legumes are highly
-regarded for their nutritional value.
+regarded for their **nutritional value**.
 
 For humans:
 
@@ -66,10 +66,10 @@ In animal feed:
 ## Economic value of grain legumes in Australia
 
 In 2025, Australia's grain legume sector is projected to produce approximately
-4.6 million tonnes across the five major crops. Collectively, the grain legume
-industry is valued at approximately AUD 3.4 to 4 billion, playing a crucial role
-in economic sustainability, ecological health, and the growing demand for
-plant-based protein in both food and feed markets.
+**4.6 million tonnes across the five major crops**. Collectively, the grain
+legume industry is **valued at approximately AUD 3.4 to 4 billion**, playing a
+crucial role in economic sustainability, ecological health, and the **growing
+demand for plant-based protein** in both food and feed markets.
 
 <Image
   src="/img/legume-graph.png"
