Add metadata to pages

--- a/app/aims/page.mdx
+++ b/app/aims/page.mdx
@@ -1,4 +1,10 @@
 import { InfoPage } from "@/components/InfoPage";
+import { Metadata } from "next";
+
+export const metadata: Metadata = {
+  title: "Aims",
+  description: "Aims of the initiative",
+}
 
 <InfoPage title="Aims">
 ## The Legume Grain ‘Omics Initiative
