--- a/app/background/page.mdx
+++ b/app/background/page.mdx
@@ -2,6 +2,11 @@ import { InfoPage } from "@/components/InfoPage";
 import { Image } from "@heroui/image";
 import { addBasePath } from "next/dist/client/add-base-path";
 
+export const metadata = {
+  title: "Background/Context",
+  description: "Context on the importance of grain legumes",
+};
+
 <InfoPage title="Background/Context">
   ## Grain legumes are important food and feed
 
