--- a/app/aims/page.mdx
+++ b/app/aims/page.mdx
@@ -1,10 +1,9 @@
 import { InfoPage } from "@/components/InfoPage";
-import { Metadata } from "next";
 
-export const metadata: Metadata = {
+export const metadata = {
   title: "Aims",
   description: "Aims of the initiative",
-}
+};
 
 <InfoPage title="Aims">
 ## The Legume Grain ‘Omics Initiative
